recycleview click on item change age &SQLite

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <item>#FF0000</item>
+    <item>#FF8C00</item>
+    <item>#FFFF00</item>
+    <item>#32CD32</item>
+    <item>#00BFFF</item>
+    <item>#4682B4</item>
+    <item>#9932CC</item>
 </resources>
